Fixed bot creation link color contrast.

--- a/packages/app/client/src/ui/dialogs/botCreationDialog/botCreationDialog.scss
+++ b/packages/app/client/src/ui/dialogs/botCreationDialog/botCreationDialog.scss
@@ -4,7 +4,7 @@
   max-height: 454px;
 
   a {
-    color: var(--link-color);
+    color: var(--dialog-link-color);
     text-decoration: none;
     line-height: 20px;
   }
